src/test/deca/syntax/valid/this_implicite.deca
// Description:
// Test l'ajoute de this dans la maéhtode getX
// Resultats:
// TEST valide syntaxiquement
// Historique:
//    cree le 01/01/2023
/* */ 

class A {
    protected int x ;
    int test_attribut;
	
    int getX(int alpha, float beta, boolean teta) {
        x = 5 ;
        a = getx();
    }

}
